# UNETR

./: .gitignore  config.yaml  main.py  pyproject.toml  requirements.txt
src/: config.py  data.py  infer.py  main.py  model.py  trainer.py
